# sysdoctor-onnx-v3-simulator

./: CMakeLists.txt  README.md  ai_engine.cpp  ai_engine.h  diagnosis.h  main.cpp  map.md  onnx_engine.cpp  onnx_engine.h  profile.txt  read_sysdoctor_model.py  rules.json  rules_config.cpp  rules_config.h  runtime.json  runtime_config.cpp  runtime_config.h  simulator.cpp  simulator.h  sysdoctor_model.onnx  system_metrics.cpp  system_metrics.h  train_sysdoctor_model.py
